update repo url

--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/yenhsuan/portfolio"
   },
   "bugs": {
-    "url": ""
+    "url": "https://github.com/yenhsuan/portfolio/issues"
   }
 }
